--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,3 +22,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.header {
+  font-family: 'Arial, sans-serif';
+  font-size: 44px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
